remove deprecated toURL method